# soextreme

./: .env  .gitignore  Dockerfile  Dockerfile-nginx  Makefile  app.ini  app.py  docker-compose.yml  pyproject.toml  traefik.toml
app/: __init__.py  app.py  config.py  main.py
app/features/: models.py
app/features/activity/: crud.py  routes.py
app/features/activity/models/: activity.py  activity_tag.py  activity_time_rule.py
app/features/activity/schemas/: activity.py
app/features/address/models/: address.py
app/features/comment/models/: comment.py
app/features/reservation/models/: reservation.py
app/features/tag/models/: tag.py
app/features/time_rule/: crud.py
app/features/time_rule/models/: rule.py  time_rule.py
app/features/time_rule/schemas/: rule.py  time_rule.py
app/features/user/models/: company.py  user.py
app/utils/database/: connection.py
front/: Dockerfile  README.md  package-lock.json  package.json  quasar.config.js
front/src/pages/: IndexPage.vue
front/src/router/: routes.js
